--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <base href="/">
-  <!-- Angular Material style sheet -->
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="build/vendor.css">
   <link rel="stylesheet" href="build/app.css">
@@ -18,6 +18,7 @@
   <div ui-view></div>
   <!-- Angular Libraries -->
   <script src="build/vendor.js"></script>
+  <script src="build/env.js"></script>
   <!-- App  -->
   <script src="build/app.js"></script>
   <script src="build/templates.js"></script>
